Resolved Issue 1: Initial commit with complete Java implementation of a transformer model, including training and benchmarking code.